updated GUI and added narrator

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -32,6 +32,12 @@
 		<scope>system</scope>
 		<systemPath>${basedir}/lib/Ab.jar</systemPath>
 	</dependency>
+  <dependency>
+    <groupId>net.sf.sociaal</groupId>
+    <artifactId>freetts</artifactId>
+    <version>1.2.2</version>
+</dependency>
+
 </dependencies>
 
   <build>
