--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "maven.terminal.useJavaHome": true,
-    "java.jdt.ls.java.home": ""
+    "java.jdt.ls.java.home": "",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
